klee/examples/prefix/klee-out-6/test000001.assert.err
Error: ASSERTION FAIL: a[3] == 'l'
File: /home/anitha/klee/examples/prefix/prefix_lib.c
Line: 17
assembly.ll line: 109
Stack: 
	#000000109 in __user_main () at /home/anitha/klee/examples/prefix/prefix_lib.c:17
	#100000548 in __uClibc_main (main=29700304, argc=1, argv=30846224, app_init=0, app_fini=0, rtld_fini=0, stack_end=0) at /home/anitha/klee-uclibc/libc/misc/internals/__uClibc_main.c:401
	#200001494 in main (=1, =30846224)
