klee/examples/prefix/klee-out-6/test000001.pc
array a[10] : w32 -> w8 = symbolic
(query [(Eq 0 (Read w8 9 a))
         (Eq false
             (Eq 108 (Read w8 3 a)))]
        false)
